--- a/Source/tsconfig.json
+++ b/Source/tsconfig.json
@@ -101,5 +101,17 @@
     "client/assets/Scripts/Core",
     "client/assets/Bundles/Code/Logic",
     "client/ct.d.ts",
-  ]
+  ],
+
+  "ts-node": {
+    // It is faster to skip typechecking.
+    // Remove if you want ts-node to do typechecking.
+    "transpileOnly": true,
+    "files": true,
+    "compilerOptions": {
+      // compilerOptions specified here will override those declared below,
+      // but *only* in ts-node.  Useful if you want ts-node and tsc to use
+      // different options with a single tsconfig.json.
+    }
+  },
 }
