--- a/Source/.vscode/launch.json
+++ b/Source/.vscode/launch.json
@@ -12,7 +12,7 @@
                 "<node_internals>/**"
             ],
             "runtimeArgs": ["-r", "ts-node/register"],
-            "args": ["${workspaceFolder}/server/Loader/Init.ts"]
+            "args": ["${workspaceFolder}/server/App/Index.ts"]
         }
     ]
 }
