--- a/Source/package.json
+++ b/Source/package.json
@@ -2,10 +2,13 @@
   "name": "ct",
   "version": "1.0.0",
   "description": "cocos creator client and nodejs server framework",
-  "main": "dist/Init.js",
+  "main": "dist/server/App/Index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^18.14.0"
+  }
 }
