--- a/Source/package.json
+++ b/Source/package.json
@@ -10,5 +10,10 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.14.0"
+  },
+  "dependencies": {
+    "@types/winston": "^2.4.4",
+    "winston": "^3.8.2",
+    "winston-daily-rotate-file": "^4.7.1"
   }
 }
