--- a/Source/package.json
+++ b/Source/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@types/winston": "^2.4.4",
+    "protobufjs": "^7.2.2",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
   }
