--- a/Source/package.json
+++ b/Source/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@types/winston": "^2.4.4",
     "protobufjs": "^7.2.2",
+    "ts-proto": "^1.139.0",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
   }
