--- a/Source/configExport/startprocessconfigcategory.json
+++ b/Source/configExport/startprocessconfigcategory.json
@@ -3,5 +3,10 @@
     "Id": 1,
     "MachineId": 1,
     "InnerPort": 20101
+  },
+  {
+    "Id": 2,
+    "MachineId": 2,
+    "InnerPort": 20101
   }
 ]
