--- a/Source/package.json
+++ b/Source/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@types/winston": "^2.4.4",
+    "mri": "^1.2.0",
     "proto-parser": "^0.0.9",
     "protobufjs": "^7.2.2",
     "winston": "^3.8.2",
