--- a/Source/client/package.json
+++ b/Source/client/package.json
@@ -2,6 +2,7 @@
   "name": "Client",
   "uuid": "0a20b124-d84c-431d-9db9-4c32c91ff8ba",
   "version": "3.6.2",
+  "type": "module",
   "creator": {
     "version": "3.6.2"
   },
