--- a/Source/package.json
+++ b/Source/package.json
@@ -7,10 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
+  "type": "module",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.14.0",
-    "@types/ws": "^8.5.4"
+    "@types/ws": "^8.5.4",
+    "ts-node": "^10.9.1"
   },
   "dependencies": {
     "@types/winston": "^2.4.4",
