--- a/Source/.vscode/launch.json
+++ b/Source/.vscode/launch.json
@@ -8,6 +8,7 @@
             "type": "node",
             "request": "launch",
             "name": "启动程序",
+            "console": "externalTerminal",
             "skipFiles": [
                 "<node_internals>/**"
             ],
