--- a/Source/client/FGUIProject/assets/Common/package.xml
+++ b/Source/client/FGUIProject/assets/Common/package.xml
@@ -3,5 +3,5 @@
   <resources>
     <image id="t5v11" name="square_1.png" path="/Image/" exported="true"/>
   </resources>
-  <publish name="" path="E:\Project\creator\CT\Client\assets\Bundles\UI\Common" packageCount="2" genCode="true"/>
+  <publish name="" path="E:\Project\creator\CT\Source\Client\assets\Bundles\UI\Common" packageCount="2" genCode="true"/>
 </packageDescription>
