--- a/Source/client/package.json
+++ b/Source/client/package.json
@@ -7,7 +7,7 @@
     "version": "3.6.2"
   },
   "dependencies": {
-    "fairygui-cc": "^1.1.1",
+    "fairygui-cc": "git+https://git@github.com:lamatimo/FairyGUI-cocoscreator.git#3.6.v3",
     "protobufjs": "^7.2.2"
   }
 }
