--- a/Source/package.json
+++ b/Source/package.json
@@ -19,6 +19,7 @@
     "mri": "^1.2.0",
     "proto-parser": "^0.0.9",
     "protobufjs": "^7.2.2",
+    "socket.io-client": "^4.6.1",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1",
     "ws": "^8.12.1"
