添加控制台 添加机器人 添加invoke

--- a/Source/.vscode/launch.json
+++ b/Source/.vscode/launch.json
@@ -23,6 +23,7 @@
                 "--AppType=Server",
                 "--process=1",
                 "--develop=true",
+                "--console=true",
                 "--loglevel=2"
             ]
         }
