--- a/Source/configExport/startsceneconfigcategory.json
+++ b/Source/configExport/startsceneconfigcategory.json
@@ -94,5 +94,13 @@
     "SceneType": "Map",
     "Name": "Map2",
     "OuterPort": 0
+  },
+  {
+    "Id": 200,
+    "Process": 1,
+    "Zone": 2,
+    "SceneType": "Robot",
+    "Name": "Robot01",
+    "OuterPort": 0
   }
 ]
