--- a/Source/configExport/startsceneconfigcategory.json
+++ b/Source/configExport/startsceneconfigcategory.json
@@ -50,7 +50,7 @@
   {
     "Id": 7,
     "Process": 2,
-    "Zone": 1,
+    "Zone": 2,
     "SceneType": "Realm",
     "Name": "Realm",
     "OuterPort": 30002
@@ -58,7 +58,7 @@
   {
     "Id": 8,
     "Process": 2,
-    "Zone": 1,
+    "Zone": 2,
     "SceneType": "Gate",
     "Name": "Gate1",
     "OuterPort": 30003
@@ -66,7 +66,7 @@
   {
     "Id": 9,
     "Process": 2,
-    "Zone": 1,
+    "Zone": 2,
     "SceneType": "Gate",
     "Name": "Gate2",
     "OuterPort": 30004
@@ -74,7 +74,7 @@
   {
     "Id": 10,
     "Process": 2,
-    "Zone": 1,
+    "Zone": 2,
     "SceneType": "Location",
     "Name": "Location",
     "OuterPort": 0
@@ -82,7 +82,7 @@
   {
     "Id": 11,
     "Process": 2,
-    "Zone": 1,
+    "Zone": 2,
     "SceneType": "Map",
     "Name": "Map1",
     "OuterPort": 0
@@ -90,7 +90,7 @@
   {
     "Id": 12,
     "Process": 2,
-    "Zone": 1,
+    "Zone": 2,
     "SceneType": "Map",
     "Name": "Map2",
     "OuterPort": 0
@@ -98,9 +98,17 @@
   {
     "Id": 200,
     "Process": 1,
-    "Zone": 2,
+    "Zone": 1,
     "SceneType": "Robot",
     "Name": "Robot01",
+    "OuterPort": 0
+  },
+  {
+    "Id": 201,
+    "Process": 2,
+    "Zone": 2,
+    "SceneType": "Robot",
+    "Name": "Robot02",
     "OuterPort": 0
   }
 ]
