--- a/Source/package.json
+++ b/Source/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@types/winston": "^2.4.4",
+    "mongodb": "^5.1.0",
     "mri": "^1.2.0",
     "proto-parser": "^0.0.9",
     "protobufjs": "^7.2.2",
