--- a/Source/client/assets/Bundles/Config/unitconfigcategory.json
+++ b/Source/client/assets/Bundles/Config/unitconfigcategory.json
@@ -1,13 +1,13 @@
 [
   {
     "Id": 1001,
-    "Type": "Player",
+    "Type": 1,
     "Name": "蛮王",
     "Desc": "带有强力攻击技能"
   },
   {
     "Id": 1002,
-    "Type": "Player",
+    "Type": 1,
     "Name": "蛮王2",
     "Desc": "带有强力攻击技能"
   }
