修改配置结构 一个进程只能容纳一个区

--- a/Source/.vscode/launch.json
+++ b/Source/.vscode/launch.json
@@ -21,6 +21,7 @@
             "args": [
                 "${workspaceFolder}/server/App/Program.ts",
                 "--AppType=Server",
+                "--zone=1",
                 "--process=1",
                 "--develop=true",
                 "--console=true",
